--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ evaluation/__pycache__/__init__.cpython-39.pyc
 evaluation/__pycache__/settings.cpython-39.pyc
 evaluation/__pycache__/urls.cpython-39.pyc
 evaluation/__pycache__/wsgi.cpython-39.pyc
+models.py
