--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-evaluation/__pycache__/__init__.cpython-39.pyc
-evaluation/__pycache__/settings.cpython-39.pyc
-evaluation/__pycache__/urls.cpython-39.pyc
-evaluation/__pycache__/wsgi.cpython-39.pyc
-models.py
+evaluation/__pycache__/*
+store/migrations/__pycache__/*
+store/__pycache__/*
