--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 appdirs==1.4.4
-asgiref @ file:///tmp/build/80754af9/asgiref_1617740417847/work
+asgiref 
 certifi==2021.5.30
 distlib==0.3.2
-Django @ file:///tmp/build/80754af9/django_1622711766781/work
+Django 
 django-filter==2.4.0
 djangorestframework==3.12.4
 filelock==3.0.12
 gunicorn==20.1.0
-mysqlclient @ file:///tmp/build/80754af9/mysqlclient_1609786120714/work
-psycopg2 @ file:///tmp/build/80754af9/psycopg2_1612298595717/work
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
+mysqlclient 
+psycopg2 
+pytz 
+sqlparse 
 virtualenv==20.4.7
