--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "author": "Alexander Pinto",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.6.1",
-    "nodemon": "^2.0.12"
+    "lite-server": "^2.6.1"
   },
   "dependencies": {
     "lite-server": "^2.6.1",
